# polars_vs_pandas

./: .gitignore  README.md  intro.md  main.py  pyproject.toml
notebooks/: academy_pandas.ipynb  academy_polars lazy.ipynb  academy_polars.ipynb  academy_polars_lazy.ipynb  intro.md  misc.ipynb  old.ipynb  pandas.ipynb  polars.ipynb  polars_lazy.ipynb
src/: pandas_utils.py  polars_utils.py
