[tool.poetry]
name = "polars_practice"
version = "0.1.0"
description = ""
authors = ["Andreas Kanz <andreas@akanz.de>"]

[tool.poetry.dependencies]
python = "~3.9"
polars = "^0.10.27"
ipykernel = "^6.6.0"
black = "^21.12b0"
pyinstrument = "^4.1.1"
pandas = "^1.3.5"
connectorx = "^0.2.3"
pyarrow = "^6.0.1"
SQLAlchemy = "^1.4.29"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
